--- a/css_js/style.css
+++ b/css_js/style.css
@@ -42,6 +42,7 @@ nav a:nth-child(3){
 #auth{
   height: 42px;
   width: 192px;
+  margin-right: 40px;
   background-color: #FF8900;
   color: white;
   text-decoration: none;
@@ -56,8 +57,7 @@ nav a:nth-child(3){
 #auth:hover{
   background-color: #b4b4b4;
 }
-
-#main{
+.main{
   background-color: #18181D;
 }
 
@@ -220,3 +220,306 @@ font-family: 'Roboto', sans-serif;
   margin-left: 0px;
 
 }
+
+
+.vipki{
+  background-color: #18181D;
+
+}
+
+
+.bronze{
+  margin-top: 264px;
+  width: 310px;
+  border-radius: 15px;
+  background-color: red;
+  margin-bottom: 180px;
+  background-color: #000000;
+}
+
+.silver{
+  margin-top: 205px;
+  width: 310px;
+
+  border-radius: 15px;
+background-color: red;
+margin-bottom: 180px;
+background-color: #000000;
+}
+
+.gold{
+  margin-top: 120px;
+  width: 310px;
+  border-radius: 15px;
+  border: 2px solid #FFEA80;
+  box-shadow: 0px 0px 4px 5px rgba(255, 234, 128, 0.25), inset 0px 0px 10px 2px #FFEA80;
+background-color: red;
+margin-bottom: 180px;
+background-color: #000000;
+  }
+
+
+.znak{
+  display: table;
+  margin: 0 auto;
+  width: 76px;
+height: 77px;
+transform: translateY(-50%);
+}
+
+.zhl{
+
+height: 47px;
+display: table;
+margin: 0 auto;
+font-family: 'Roboto', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 48px;
+line-height: 56px;
+color: #FFFFFF;
+text-shadow: -4px 0px 0px #D25F2D;
+}
+
+.opor{
+font-family: 'Roboto', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 10px;
+line-height: 12px;
+color: #817C7F;
+margin-left: 32px;
+margin-top: 32px;
+}
+
+.previleg li{
+  margin-top: 7px;
+}
+
+.previleg li{
+font-family: 'Roboto', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 12px;
+line-height: 14px;
+color: #FFFFFF;
+}
+
+.ciara{
+  margin-top: 28px;
+  border: 0.01px solid #AEAEAE;
+  }
+
+ .lngth{
+  display: table;
+  margin: 0 auto;
+  margin-top: 19px;
+  font-family: 'Roboto', sans-serif;
+font-style: normal;
+font-weight: 900;
+font-size: 9px;
+line-height: 11px;
+color: #817C7F;
+   }
+
+   .pric{
+    display: table;
+    margin: 0 auto;
+    margin-top: 17px;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
+   }
+
+   .pric img{
+   transform: translateY(-25%);
+   }
+
+   .kup{
+     transform: translateY(-37px);
+    width: 264px;
+   height: 37px;
+   display: table;
+   margin: 0 auto;
+   padding-top: 5px;   
+   margin-top: 56px;
+   background: #FF8900;
+  border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+font-style: normal;
+font-weight: 900;
+font-size: 18px;
+text-decoration: none;
+color: #FFFFFF;
+  }
+
+    .kup:hover{
+      text-decoration: none;
+      color: white;
+      background-color: #b4b4b4;
+    }
+
+.modal{
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
+
+.modal-content{
+  width: 354px;
+  height: 544px;
+border: 1px solid #FF8900;
+box-shadow: 0px 0px 4px #FF8900, inset 0px 0px 4px 2px #FF8900;
+}
+.modal-backdrop
+{
+    opacity:0.3 !important;
+}
+#mdd{
+  background-color:#161619;
+  border-radius: 20px;
+}
+
+.modal-content img{
+  width: 142px;
+height: 106px;
+display: table;
+margin: 0 auto;
+margin-top: 55px;
+}
+
+.modal-content p{
+  margin-top: 31px;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 95%;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  
+}
+.close{
+  color: white;
+  margin-left: 92%;
+  margin-top: 7px;
+  margin-right: 10px;
+}
+
+.modal-content p:last-child{
+  max-width: 250px;
+  text-align: center;
+  display: table;
+  margin: 0 auto;
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+.modal-content i{
+  font-family: 'Roboto', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 10px;
+margin-top: 20px;
+margin-bottom: 5px;
+text-align: center;
+line-height: 12px;
+color: #817C7F;
+}
+.modal-content a{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 5px;
+  width: 235px;
+height: 28px;
+background: #18181D;
+border: 1px solid #505053;
+box-sizing: border-box;
+border-radius: 5px;
+display: table;
+margin: 0 auto;
+font-family: 'Roboto', sans-serif;
+text-align: center;
+color: #FFFFFF;
+text-decoration: none;
+pointer-events: none;
+   cursor: default;
+}
+
+#coal2{
+  display: inline-block;
+  height: 24px;
+  width: 25px;
+  margin: 0px;
+  transform: translateY(-3px);
+}
+
+.modal-content a:not([href]) {
+  color: white;
+  text-decoration: none;
+}
+
+.lng2{
+  font-family: 'Roboto', sans-serif;
+  width: 240px;
+font-style: normal;
+font-weight: bold;
+font-size: 10px;
+line-height: 12px;
+margin-bottom: 25px;
+}
+
+.selsr{
+  margin-top: 50%;
+  font-family: 'Roboto', sans-serif;
+color: white;
+font-style: normal;
+font-weight: bold;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.095em;
+color: #FFFFFF;
+}
+.btn-group{
+  margin-top: 5px;
+}
+.btn-secondary{
+  width: 163px;
+height: 162px;
+background-color:transparent ;
+box-shadow: inset 0px 0px 10px 1px rgba(255, 255, 255, 0.25);
+border-radius: 10px 0px 0px 0px;
+}
+.btn-secondary:nth-child(3){
+ display: inline;
+}
+.by{
+  font-size: 24px;
+  margin-top: 50%;
+  transform: translateY(-50%);
+}
+
+.durat{
+  font-family: 'Roboto', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 18px;
+line-height: 21px;
+letter-spacing: 0.095em;
+float: left;
+color: #FFFFFF;
+margin-top: 25px;
+}
+
+.fa-calendar{
+  margin-right: 10px;
+}
+
+.ptv{
+ margin-top: 70px;
+}
+
+
