--- a/css_js/style.css
+++ b/css_js/style.css
@@ -36,7 +36,7 @@ nav a:nth-child(3){
 #logo{
   height: 106px;
   width: 142px;
-  text-align: center;
+  
 }
 
 #auth{
@@ -63,7 +63,7 @@ nav a:nth-child(3){
 
 
 video{
-  width: 870px;
+  width: 900px;
   height: 489px;
   margin-top: 74px;
   margin-bottom: 39px;
@@ -489,17 +489,36 @@ color: #FFFFFF;
 .btn-secondary{
   width: 163px;
 height: 162px;
-background-color:transparent ;
-box-shadow: inset 0px 0px 10px 1px rgba(255, 255, 255, 0.25);
+margin-left: 0px;
+background-color:#161619 ;
+
 border-radius: 10px 0px 0px 0px;
+}
+.btn-secondary input{
+  visibility: hidden;
 }
 .btn-secondary:nth-child(3){
  display: inline;
 }
 .by{
   font-size: 24px;
-  margin-top: 50%;
-  transform: translateY(-50%);
+  margin-top: 30%;
+  
+}
+
+.bz{
+  display: table;
+  margin: 0 auto;
+  margin-top: -24px;
+  transform: translateY(40px);
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  color: #FFFFFF;
+ 
+  text-decoration: line-through;
+  text-decoration-color: red;
 }
 
 .durat{
@@ -659,28 +678,15 @@ color: white;;
 }
 
 #prp{
-  transform: translateY(-37px);
-  width: 264px;
- height: 37px;
- display: table;
- margin: 0 auto;
- padding-top: 5px;   
- margin-top: 56px;
- background: #FF8900 !important;
-border-radius: 5px;
-font-family: 'Roboto', sans-serif;
-text-align: center;
-font-style: normal;
-font-weight: 900;
-font-size: 18px;
-text-decoration: none;
-color: #FFFFFF;
-pointer-events:auto !important;
- cursor:pointer;
+  background-color: #FF8900;
+  cursor: pointer;
+  pointer-events: all;
 }
 
 #prp:hover{
   background-color: #b4b4b4;
+  color: white;
+  text-decoration: none;
 }
 
 #mn{
@@ -701,3 +707,77 @@ pointer-events:auto !important;
   display: inline-block;
   transform: translateY(-20px);
 }
+
+.df a{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 5px;
+  width: 235px;
+height: 28px;
+background: #FF8900;;
+border: 1px solid #505053;
+box-sizing: border-box;
+border-radius: 5px;
+display: table;
+margin: 0 auto;
+font-family: 'Roboto', sans-serif;
+text-align: center;
+color: #FFFFFF;
+text-decoration: inherit;
+pointer-events: all;
+   cursor: pointer;
+}
+
+.df a:hover{
+  text-decoration: none;
+  background-color: #b4b4b4;
+  color: white;
+}
+
+.sl{
+  height: 400px;
+}
+
+.bl{
+  height: 350px;
+}
+#add{
+ 
+  margin-left: 10px;
+  margin-right: 10px;
+  color: #FF8900;
+}
+
+#profile *{
+  display: inline;
+}
+
+#profile{
+  margin-right: 40px;
+}
+
+#picu{
+  height: 50px;
+  width: 60px;
+}
+
+#logout{
+  margin-left: 10px;
+  color: white;
+}
+
+#profile a:hover{
+ color: #b4b4b4;
+}
+
+.medias a:hover{
+  color: #b4b4b4;
+ }
+ 
+ .ent{
+   padding-bottom: 60px;
+ }
+
+ .mn{
+   transform: translateX(-50px);
+ }
