--- a/css_js/style.css
+++ b/css_js/style.css
@@ -559,6 +559,7 @@ max-width: 200px;
   color: #b4b4b4;
 }
 
+
 .nav-pills .nav-link.active{
   color: #FF8900 !important;
   background-color: transparent !important;
@@ -759,8 +760,9 @@ pointer-events: all;
 }
 
 #picu{
-  height: 50px;
-  width: 60px;
+  border-radius: 50%;
+  height: 60px;
+  width: 70px;
 }
 
 #logout{
@@ -782,4 +784,10 @@ pointer-events: all;
 
  .mn{
    transform: translateX(-50px);
+ }
+
+ .alert{
+   margin-top: 50px;
+   margin-left: 10px;
+   width: 20%;
  }
